--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon api/server.js",
     "build": "npm install && npm install --prefix Books && npm run build --prefix Books",
-    "start": "nodemon api/server.js",
+    "start": "node api/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
